modify sm fuhao

--- a/_posts/技术/2015-07-21-About-JMX.md
+++ b/_posts/技术/2015-07-21-About-JMX.md
@@ -12,18 +12,23 @@ description:
 
   2.代理层（MBeanServer） 代理层其实是管理MBean的容器，容器里面的MBean通过MBeanServer向外界提供服务，所以这层叫做代理层。
 
-   .2.1  一个MBeanServer通过如下的工厂方法创建：
+    2.1  一个MBeanServer通过如下的工厂方法创建：
+
 ```
 	MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
 ```
+
     2.2 MBean可以注册到这个MBeanServer：
+
 ```
 	ObjectName name = new ObjectName("com.example.mbeans:type=Hello");
         Hello mbean = new Hello();
 
         mbs.registerMBean(mbean, name);
 ```
+
 	ObjectName是从容器中取出这个MBean的Key。一个MBeanServer中不能注册两个相同的ObjectName。 MBeanServer基本上是通过反射机制来访问容器中的MBean的，所以对外提供的访问方法和反射机制很相似，基本上就是多了一个ObjectName的参数而已，下面列几个例子：
+
 ```
 	mbs.getAttribute(mbeanObjectName, "State");
 
@@ -31,14 +36,18 @@ description:
 
 	mbs.invoke(mbeanObjectName, "reset", null, null); //TODO 代理层先写到这里吧，如果以后有需要补充的再加。
 ```
+
 3，发布层 所谓发布层就是外界访问代理层的方法。
 
   3.1 可以通过如下的方法启动一个RMI服务器 :
+
 ```
 JMXServiceURL url = new JMXServiceURL("service:jmx:rmi:///jndi/rmi://localhost:9999/server");
 JMXConnectorServer cs = JMXConnectorServerFactory.newJMXConnectorServer(url, null, mbs);
 
-              3.2 Client可以连接到这个RMI服务器 :
+```
+
+  3.2 Client可以连接到这个RMI服务器 :
 
 JMXServiceURL url = new JMXServiceURL("service:jmx:rmi:///jndi/rmi://localhost:9999/server");
 
@@ -46,6 +55,7 @@ JMXConnector jmxc = JMXConnectorFactory.connect(url, null);
 
 MBeanServerConnection mbsc = jmxc.getMBeanServerConnection();
 ```
+
 而MBeanServer就是继承自MBeanServerConntion的，所以他们的大部分方法都一样或者相似。 OK，JMX的基本概念就介绍到这里.
 
 
