--- a/_posts/诗词/2013-12-31-Yong-Yu-Le.md
+++ b/_posts/诗词/2013-12-31-Yong-Yu-Le.md
@@ -14,7 +14,7 @@ description:
 
 斜阳草树，寻常巷陌，人道寄奴曾住。
 
-想当年、金戈铁马，气吞万里如虎。
+想当年，金戈铁马，气吞万里如虎。
 
 元嘉草草，封狼居胥，赢得仓皇北顾。
 
@@ -22,4 +22,4 @@ description:
 
 可堪回首，佛狸祠下，一片神鸦社鼓！
 
-凭谁问、廉颇老矣，尚能饭否？
+凭谁问，廉颇老矣，尚能饭否？
