--- a/_posts/事业/2017-02-03-Summarize2016-Outlook2017.md
+++ b/_posts/事业/2017-02-03-Summarize2016-Outlook2017.md
@@ -37,11 +37,11 @@ description:
 技术上面：掌握Scala语言，通读Kafka源码，Redis源码，看完20本技术书籍。
 
  2017的技术书单    
-*《Effective Java》
-*《Algorithm》算法Java版
-*《Hackers & Painters》
-*《Structure and Interpretation of Computer Programs 》
-*《Computer System》
+* 《Effective Java》
+* 《Algorithm》算法Java版
+* 《Hackers & Painters》
+* 《Structure and Interpretation of Computer Programs 》
+* 《Computer System》
 
 本来像写上个20，30本的，但是发现上面这几本分量已经足够，特别是最后2本。如果都通读一边，并且弄清楚里面80%的东西，我想这技术层次必须会上2个层次。
 这两本书，已经包括了大学计算机课程2年左右的学习内容了。
@@ -50,7 +50,7 @@ description:
 
 #### 总结2016： ####
 
-就是搞期货那段时间，压力特别大，因为每天都是下班后，还要搞到23：30，才下电脑，晚上睡不好，头发掉了很多。真是得不偿失啊。又不是没有一技吃饭。
+就是搞期货那段时间，压力特别大，因为每天都是下班后，还要搞到23:30，才下电脑，晚上睡不好，头发掉了很多。真是得不偿失啊。又不是没有一技吃饭。
 
 #### 展望2017： ####
 
@@ -69,6 +69,4 @@ description:
 #### 展望2017： ####
 
 2017年是准备在不放弃交易的前提下，将交易对工作，生活的影响降至最低。使用Midori的日志本做模拟交易，每天还是坚持看看盘，不大紧要。空出的时间用于学习JAVA技术。
-
-![1]( http://7xnlfe.com1.z0.glb.clouddn.com/2017-02-03-Summarize2016-Outlook2017.jpg )
 
