--- a/_posts/creation/book/2017-02-03-Book-List.md
+++ b/_posts/creation/book/2017-02-03-Book-List.md
@@ -6,30 +6,34 @@ tags:
 keywords: 
 description: 
 ---
-	  
+| 修改时间 |    修改内容        | 描述  |
+| ------------- |:-------------:| -----:|
+| 2017-05-27     | 添加书籍阅读进度| |
+
+ 
 2017的重点在工作上，所以技术上面时间投入较大，再过个2，3年，30岁以后就学不动了哦。
 
-### 技术书单 ###
+### 技术书单 
 
-*《Effective Java》
-*《Algorithm》算法Java版
-*《Hackers & Painters》
-*《Structure and Interpretation of Computer Programs 》
-*《Computer System》
+* 《Effective Java》
+* 《Algorithm》算法Java版
+* 《Hackers & Painters》
+* 《Structure and Interpretation of Computer Programs 》
+* 《Computer System》
 
-### 交易书单 ###
+### 交易书单 
 
-*《Trader Vic:Methods of a Wall Street Master》
-*《Reminiscences of a Stock Operator》 这是第三遍了吧？
-*《So Far So Good》
+* 《Trader Vic:Methods of a Wall Street Master》
+* 《Reminiscences of a Stock Operator》 这是第三遍了吧？
+* 《So Far So Good》
 
-### 人文书单 ###
+### 人文书单 
 
 人文类的书，大多无所用。
 
-*《孙子并发十一家校理》
-*《四书章句集注》
-*《穆斯林的葬礼》
-*《白鹿原》
-*《How to Read a Book》
-*《Psychology And Life》
+* 《孙子兵法十一家校理》
+* 《四书章句集注》
+* 《穆斯林的葬礼》
+* 《白鹿原》
+* 《How to Read a Book》
+* 《Psychology And Life》
