修改目录结构；调整atom

--- a/_posts/2017-06-06-State.md
+++ b/_posts/2017-06-06-State.md
@@ -8,6 +8,10 @@ keywords:
 description: 
 ---
 
+### 2017.07
+
+    上班时间读The Art Of Unix，周末读CSAPP。
+
 ### 2017.06
 
   最近在学习和制作爬虫方面的产品，准备将500px.com上面的所有摄影作品全部，一次性的爬取下来，然后本地观看。<br>
