--- a/_posts/trash/2015-10-18-Over-Work.md
+++ b/_posts/trash/2015-10-18-Over-Work.md
@@ -1,14 +1,15 @@
 ---
 layout: post
 title: 20151018记
-category: career
+category: trash
 tags: 
 keywords: 
 description: 
 ---
 
 
-
+<span style="color:red">**废弃**</span><br/>
+原因：毫无价值，只是情绪发泄
 
 又是尼玛一个极度糟糕的经历。我草。
 
