--- a/_posts/2017-06-06-State.md
+++ b/_posts/2017-06-06-State.md
@@ -8,9 +8,13 @@ keywords:
 description: 
 ---
 
+
+### 2017.07.28
+开始学习大数据核心概念。MapReduce,GFS等。
+
 ### 2017.07
 
-    上班时间读The Art Of Unix，周末读CSAPP。
+上班时间读The Art Of Unix，周末读CSAPP。
 
 ### 2017.06
 
