--- a/_posts/life/zen/2016-02-14-Wu-Dao.md
+++ b/_posts/life/zen/2016-02-14-Wu-Dao.md
@@ -1,9 +1,9 @@
 ---
-layout: post
-title: 佛家、道家修行、悟道的根本方法
+layout:  post
+title:  佛家、道家修行、悟道的根本方法
 category: zen
 tags: 
-keywords: 
+keywords: zen
 description: 
 ---
 
