modify stock post;

--- a/_posts/trash/2015-08-29-Trade-Diary20150829.md
+++ b/_posts/trash/2015-08-29-Trade-Diary20150829.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: 交易日记20150829
-category: stock
+category: trash
 tags: 
 keywords: 
 description: 
 ---
 
-
+**废弃，看个毛的背离，还有拿着固定的方式方法能去赢一个动态的市场吗？**
 
 今天看了下大盘和很多股票，感觉情况不太对劲。
 
@@ -17,7 +17,9 @@ description:
 
 2. 看了下近期强度排名很多股票在大盘大跌的情况下反而大涨不跌。
 
-而且很多股票都是那种一触即发的状态。不过我现在已经放弃主观了，采用机械性的交易系统。30天线。上破30天线买入，下破30天线卖出。如果是牛市的情况下，可以一直持有。
+而且很多股票都是那种一触即发的状态。不过我现在已经放弃主观了，采用机械性的交易系统。
+
+30天线。上破30天线买入，下破30天线卖出。如果是牛市的情况下，可以一直持有。
 
 
 
