modify some posts

--- a/_posts/trash/2014-09-14-8264.md
+++ b/_posts/trash/2014-09-14-8264.md
@@ -1,11 +1,13 @@
 ---
 layout: post
 title: 豆瓣磨坊8264
-category: inspiration
+category: trash
 tags: 
 keywords: 
 description: 
 ---
+
+**废弃，写的不够深入**
 
 ### 豆瓣：###
 
