add description;modify index.html;

--- a/_posts/2017-06-06-State.md
+++ b/_posts/2017-06-06-State.md
@@ -5,9 +5,12 @@ title: 个人动态
 category: life
 tags: 
 keywords: 
-description: 
+description: 宋鑫的个人动态
 ---
 
+### 2017.08.27
+上班时间学习算法和数据结构，每天搞一课，用java实现。  
+最近工作上在搞数据同步的东西，用maxwell，kafka，maxwell-sink来实现的。
 
 ### 2017.07.28
 开始学习大数据核心概念。MapReduce,GFS等。
