--- a/_posts/creation/book/2017-02-03-Book-List.md
+++ b/_posts/creation/book/2017-02-03-Book-List.md
@@ -4,7 +4,7 @@ title: 2017的书单
 category: book
 tags: book 
 keywords: 书单
-description: 
+description:  2017年个人需要完成的年度书单，其中肯定有些书你不知道并且非常有价值去读的。
 ---
 | 修改时间 |    修改内容        | 描述  |
 | ------------- |:-------------:| -----:|
