--- a/_posts/life/career/2017-02-03-Summarize2016-Outlook2017.md
+++ b/_posts/life/career/2017-02-03-Summarize2016-Outlook2017.md
@@ -4,7 +4,7 @@ title: 总结2016，展望2017
 category: work
 tags: 
 keywords: 
-description: 
+description: 总结2016，展望2017，关于工作，关于生活。
 published: false
 ---
 
