--- a/_posts/2017-06-06-Resume.md
+++ b/_posts/2017-06-06-Resume.md
@@ -5,7 +5,8 @@ title: 宋鑫的简历
 category: 
 tags: 
 keywords: 
-description: 
+description: 宋鑫的简历，java程序员，期待年薪百万。
+published: false
 ---
 
 **注意：联系本人之前，请务必先阅读<a href="#attention">注意事项</a>**  
@@ -104,28 +105,6 @@ bs的web系统，用来管理集团总部智慧大厦中的视频播放器设备
 2. 创业公司招聘，请先思考一个问题：如何让一个人不拿工资也心甘情愿的给你工作？
 3. 请用简短的语言介绍：你们的公司及其愿景；产品及其所解决的问题，创造的价值；
 4. 如果你自认为你们在做一件有意义，有趣，甚至激动人心的事情，条件1可忽略。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
