optimize website structure;

--- a/_posts/2017-06-06-Resume.md
+++ b/_posts/2017-06-06-Resume.md
@@ -1,8 +1,7 @@
 ---
-permalink: /resume
 layout: post
 title: 宋鑫的简历
-category: 
+category: career
 tags: 
 keywords: 
 description: 宋鑫的简历，java程序员，期待年薪百万。
