add copyright;add beian;add google bigtable;

--- a/_posts/2017-06-06-Resume.md
+++ b/_posts/2017-06-06-Resume.md
@@ -1,11 +1,12 @@
 ---
+permalink: /resume.html
 layout: post
 title: 宋鑫的简历
 category: career
 tags: 
 keywords: 
 description: 宋鑫的简历，java程序员，期待年薪百万。
-published: false
+published: true
 ---
 
 **注意：联系本人之前，请务必先阅读<a href="#attention">注意事项</a>**  
