--- a/_posts/2017-06-06-State.md
+++ b/_posts/2017-06-06-State.md
@@ -8,6 +8,12 @@ keywords:
 description: 宋鑫的个人动态
 ---
 
+### 2017.10.11
+开始自学前端，准备做全栈工程师，转独立产品创作者，为后续创业打基础。
+
+### 2017.10.9
+去台湾浪了8天，深深感受到台湾人民的热情
+
 ### 2017.08.27
 上班时间学习算法和数据结构，每天搞一课，用java实现。  
 最近工作上在搞数据同步的东西，用maxwell，kafka，maxwell-sink来实现的。
