--- a/_posts/career/2017-02-03-Summarize2016-Outlook2017.md
+++ b/_posts/career/2017-02-03-Summarize2016-Outlook2017.md
@@ -2,7 +2,7 @@
 layout: post
 title: 总结2016，展望2017
 category: career
-tags: 
+tags: [summary,outlook]
 keywords: 
 description: 总结2016，展望2017，关于工作，关于生活。
 published: false
