add recent thoughts

--- a/_posts/career/2017-06-06-State.md
+++ b/_posts/career/2017-06-06-State.md
@@ -8,6 +8,9 @@ keywords:
 description: 宋鑫的个人动态
 ---
 
+### 2018年3月22日
+原来所有的努力都是值得的，也是会被人看到，被人认可的。继续努力。
+
 ### 2017.10.11
 开始自学前端，准备做全栈工程师，转独立产品创作者，为后续创业打基础。
 
