add qzone shuoshuo

--- a/_posts/career/2017-06-06-Resume.md
+++ b/_posts/career/2017-06-06-Resume.md
@@ -7,9 +7,8 @@ categoryStr: 职场
 tags: 
 keywords: 
 description: 宋鑫的简历，java程序员，期待年薪百万。
+published: false
 ---
-
-**注意：联系本人之前，请务必先阅读<a href="#attention">注意事项</a>**  
 
 # 个人信息
 
