--- a/_posts/me/2018-05-05-Quotes.md
+++ b/_posts/me/2018-05-05-Quotes.md
@@ -1,8 +1,8 @@
 ---
 permalink: /quotes.html
 layout: post
-title: 摘抄语录
-category: essay
+title: 语录
+category: me
 categoryStr: 随笔
 tags: 
 keywords: 
