add whydowrong doupodiary

--- a/_posts/me/2016-10-10-Ana.md
+++ b/_posts/me/2016-10-10-Ana.md
@@ -9,6 +9,18 @@ keywords:
 description: 个人的语录，希望对你有所启发。
 ---
 
+### 2018-05-15
+一切皆有时。
+### 2018-05-04 
+现代人的困惑就在于知道的太多，懂得太少，能做到的就更少了。想的太多，做的太少，所以就有了：“为什么我懂得那么多道理却过不好这一生？！”
+
+### 2018-03-19
+我失败的原因就在于：做什么都没有全力以赴，破釜沉舟。
+
+### 2018-04-25
+投机还是受限于形式，思维怎么都转换不过来。
+
+### 2017-07-07
 <hr>
 昨天晚上做了个很奇怪的梦。梦到的人叫三元，但是怎么长相却是个女的。
 
