--- a/_posts/career/2017-06-06-Resume.md
+++ b/_posts/career/2017-06-06-Resume.md
@@ -15,7 +15,7 @@ published: false
  - 宋鑫/男/1990年/湖北武汉/28/汉族
  - 2012年6月/长江大学/计算机科学与技术专业
  - Tel:18025360608/Email:<a href="mailto:songxin@3gods.com">songxin@3gods.com</a>
- - Website：<a href="http://3gods.com">宋鑫的博客</a>
+ - Website：<a href="https://3gods.com">宋鑫的博客</a>
  - Github：<a href="https://github.com/songxin1990">宋鑫的Github</a>
 
 # 开源贡献
