--- a/_posts/me/2016-01-01-Moods.md
+++ b/_posts/me/2016-01-01-Moods.md
@@ -8,6 +8,12 @@ tags:
 keywords: 
 description: 这个是用来写写平时随思随想，心情的只言片语的
 ---
+### 2018-05-18
+突然感到怅然若失，一阵迷茫，好像没有了目标
+<div class="thumbnail" style="width:85%">
+	<img src="http://devmrn.cornerstoneadmin.org/wp-content/uploads/sites/4/2017/10/GF-Lost.jpg" alt="GF-Lost" style="width:100%">
+	</div>
+
 #### 2018-05-14 06:00
 测试自己的说说，微博功能
 <div class="thumbnail" style="width:85%">
