--- a/_posts/me/2016-01-01-Moods.md
+++ b/_posts/me/2016-01-01-Moods.md
@@ -9,6 +9,9 @@ keywords:
 description: 这个是用来写写平时随思随想，心情的只言片语的
 ---
 ### 2018-05-18
+决定了，两点：1. 赶紧重新换份工作，只为不这么纠结；2. 这段时间以投机为主，积攒资金
+
+### 2018-05-18
 突然感到怅然若失，一阵迷茫，好像没有了目标。
 <div class="thumbnail" style="width:85%">
 	<img src="http://devmrn.cornerstoneadmin.org/wp-content/uploads/sites/4/2017/10/GF-Lost.jpg" alt="GF-Lost" style="width:100%">
