--- a/_posts/me/2016-10-10-Ana.md
+++ b/_posts/me/2016-10-10-Ana.md
@@ -11,8 +11,8 @@ description: 个人的语录，希望对你有所启发。
 
 ### 2018-05-21
 没有人知道方向，所有人都在试探。
-
-
+### 2018-05-18
+所有人都该死。
 ### 2018-05-15
 一切皆有时。
 ### 2018-05-04 
