--- a/_posts/me/2016-01-01-Moods.md
+++ b/_posts/me/2016-01-01-Moods.md
@@ -8,7 +8,11 @@ tags:
 keywords: 
 description: 这个是用来写写平时随思随想，心情的只言片语的
 ---
+### 2018-05-28
+现在深能体会陶渊明说的：“不为五斗米折腰”，能有这气节的人不多。
 
+### 2018-05-22
+我们居然能够通过简单的使用产品，仅仅只通过观察就能学习到这么多东西。
 ### 2018-05-18
 突然感到怅然若失，一阵迷茫，好像没有了目标。
 <div class="thumbnail" style="width:85%">
