--- a/_posts/me/2016-10-10-Ana.md
+++ b/_posts/me/2016-10-10-Ana.md
@@ -9,6 +9,11 @@ keywords:
 description: 个人的语录，希望对你有所启发。
 ---
 
+### 2018-05-25 
+每一天都是全新的战斗。Everyday is a New Battle.  
+<div class="thumbnail" style="width:85%">
+	<img src="http://greenbookblog.org/wp-content/uploads/2014/06/new-day.jpg" alt="Everyday is a New Battle" style="width:100%">
+</div>
 ### 2018-05-21
 没有人知道方向，所有人都在试探。
 ### 2018-05-18
