add baidu idnex

--- a/_posts/me/2016-10-10-Ana.md
+++ b/_posts/me/2016-10-10-Ana.md
@@ -9,6 +9,9 @@ keywords:
 description: 个人的语录，希望对你有所启发。
 ---
 
+### 2018-06-15
+别纠结了，别挣扎了，放弃吧，不管你如何选择，你都只能得到一面，而忍受另外的一面。  
+你以为做个普通人很容易？恰恰相反。  
 ### 2018-05-25 
 每一天都是全新的战斗。Everyday is a New Battle.  
 <div class="thumbnail" style="width:85%">
