--- a/_posts/me/2016-01-01-Moods.md
+++ b/_posts/me/2016-01-01-Moods.md
@@ -8,6 +8,9 @@ tags:
 keywords: 
 description: 这个是用来写写平时随思随想，心情的只言片语的
 ---
+### 2018-06-22
+当你寄人篱下的时候，就要忍受别人的各种摆布，看似稳定的工作其实也在付出高昂的代价，只是你意识不到罢了。  
+不仅意识不到，更可怕的是媒体铺天盖地的洗脑，让人习以为常，再加上羊群效应，你现在这样太正常不过了。
 ### 2018-06-11 
 自己搭建了一个Idea Server激活服务，激活地址:http://idea.3gods.com
 ### 2018-06-07
