--- a/_posts/me/2016-10-10-Ana.md
+++ b/_posts/me/2016-10-10-Ana.md
@@ -3,7 +3,7 @@ permalink: /ana.html
 layout: post
 title: 个人语录
 category: me
-categoryStr: 随笔
+categoryStr: 关于
 tags: 
 keywords: 
 description: 个人的语录，希望对你有所启发。
