--- a/_posts/me/2017-06-06-State.md
+++ b/_posts/me/2017-06-06-State.md
@@ -3,7 +3,7 @@ permalink: /state.html
 layout: post
 title: 我的近况
 category: me
-categoryStr: 职场 
+categoryStr: 关于
 tags: 
 keywords: 
 description: 宋鑫的个人近况
