--- a/_posts/me/2016-10-10-Quote.md
+++ b/_posts/me/2016-10-10-Quote.md
@@ -1,22 +1,33 @@
 ---
-permalink: /ana.html
+permalink: /quote.html
 layout: post
-title: 个人语录
+title: 语录
 category: me
 categoryStr: 关于
 tags: 
 keywords: 
 description: 个人的语录，希望对你有所启发。
 ---
-
+### 2018-06-27  
+人最可笑最可怕的一点是：不相信自己，却对他人抱有幻想。
 ### 2018-06-15
 别纠结了，别挣扎了，放弃吧，不管你如何选择，你都只能得到一面，而忍受另外的一面。  
 你以为做个普通人很容易？恰恰相反。  
+### 2018-06-06  
+人在世上走，刀在石上磨。
+
 ### 2018-05-25 
 每一天都是全新的战斗。Everyday is a New Battle.  
 <div class="thumbnail" style="width:85%">
 	<img src="http://greenbookblog.org/wp-content/uploads/2014/06/new-day.jpg" alt="Everyday is a New Battle" style="width:100%">
 </div>
+
+### 2018-05-07  
+没在深夜里痛哭过的人，不足以语人生。
+### 2018-05-05  
+你配不上自己的野心，也辜负了所有受过的苦难。
+### 2018-05-03  
+纸上得来终觉浅，绝知此事要躬行。人生是用来经历的，不是用来听大话，懂大道理的。
 
 ### 2018-05-21
 没有人知道方向，所有人都在试探。
