add speculate these years

--- a/_posts/me/2016-10-10-Quote.md
+++ b/_posts/me/2016-10-10-Quote.md
@@ -6,8 +6,11 @@ category: me
 categoryStr: 关于
 tags: 
 keywords: 
-description: 个人的语录，希望对你有所启发。
+description: 手机的语录，希望对你有所启发。
 ---
+### 2018-07-25 
+我最喜欢看的故事就是英雄末路的最后一击，少年练剑学成的出师一战，拥抱之后不顾艰险的真爱，和说了再见之后永不重逢的告别。
+
 ### 2018-06-27  
 人最可笑最可怕的一点是：不相信自己，却对他人抱有幻想。
 ### 2018-06-15
