--- a/_posts/me/2016-10-10-Quote.md
+++ b/_posts/me/2016-10-10-Quote.md
@@ -8,6 +8,8 @@ tags:
 keywords: 
 description: 手机的语录，希望对你有所启发。
 ---
+### 2018-07-30 
+我发现到现在，我才真的开始学会一点点如何思考。那就是动用自己的大脑和常识去思考，而不要人云亦云，被他人灌输。  
 ### 2018-07-25 
 我最喜欢看的故事就是英雄末路的最后一击，少年练剑学成的出师一战，拥抱之后不顾艰险的真爱，和说了再见之后永不重逢的告别。
 
