add progrmming nav

--- a/_posts/me/1989-04-02-me.md
+++ b/_posts/me/1989-04-02-me.md
@@ -2,7 +2,7 @@
 permalink: /me.html
 layout: page
 breadcrumb: true
-title: 我
+title: Live Once,Once Forever
 description: 关于宋鑫的其人其事
 ---
 
@@ -100,14 +100,6 @@ description: 关于宋鑫的其人其事
 
     </ul>
 
-    <h3>加入组织</h3>
-    <ul class="list-inline">
-        <li>
-            <a href="//shang.qq.com/wpa/qunwpa?idkey=4f5f326ebf64403f8c03e914040fa65329040a815d653e0befa4e3603fb83913" target="_blank">
-                <img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="Big" title="Big">
-            </a>
-        </li>
-    </ul>
 
 </div>
 
