--- a/_posts/life/2016-01-01-Moods.md
+++ b/_posts/life/2016-01-01-Moods.md
@@ -4,7 +4,7 @@ layout: page
 breadcrumb: true
 title: 随想-心情的只言片语
 category: me
-categoryStr: 关于
+categoryStr: 关于我
 tags: 
 keywords: 
 description: 这个是用来写写平时随思随想，心情的只言片语的
