--- a/_posts/life/2016-10-10-Quote.md
+++ b/_posts/life/2016-10-10-Quote.md
@@ -4,7 +4,7 @@ layout: page
 breadcrumb: true
 title: 语录
 category: me
-categoryStr: 关于
+categoryStr: 关于我
 tags: 
 keywords: 
 description: 收集的语录，希望对你有所启发。
