--- a/_posts/trade/tao/2016-02-14-Wu-Dao.md
+++ b/_posts/trade/tao/2016-02-14-Wu-Dao.md
@@ -2,10 +2,10 @@
 layout: page
 breadcrumb: true
 title:  佛家、道家修行、悟道的根本方法
-category: zen
+category: tao
 categoryStr: 禅
 tags: 
-keywords: zen
+keywords: tao
 description: 
 ---
 
