add fed riserate bullmarket

--- a/_posts/me/2016-10-10-Quote.md
+++ b/_posts/me/2016-10-10-Quote.md
@@ -5,10 +5,13 @@ breadcrumb: true
 title: 语录
 category: me
 categoryStr: 关于我
-tags: 
+tags: [essence]
 keywords: 
 description: 收集的语录，希望对你有所启发。
 ---
+
+
+
 ### 2018-07-30 
 我发现到现在，我才真的开始学会一点点如何思考。那就是动用自己的大脑和常识去思考，而不要人云亦云，被他人灌输。  
 ### 2018-07-25 
