--- a/_posts/me/2016-10-10-Quote.md
+++ b/_posts/me/2016-10-10-Quote.md
@@ -10,6 +10,9 @@ keywords:
 description: 收集的语录，希望对你有所启发。
 ---
 
+### 2023-07-06
+30岁的人生，有的人可能才是刚刚开始，有的人已经走上人生巅峰，还有的人坠落谷底，无论如何，生活都得继续，都得向前走，
+这才是生活最残酷的地方。时间不曾为任何人停留。天地不仁，万物刍狗。
 
 
 ### 2018-07-30 
