--- a/_posts/psychology/2022-02-02-Fareware.md
+++ b/_posts/psychology/2022-02-02-Fareware.md
@@ -2,8 +2,7 @@
 layout: page
 
 title: 诀别
-category: me
-categoryStr: 我的
+category: psychology
 tags:
 keywords:
 description:
@@ -17,4 +16,3 @@ published:  false
 ## 
 
 ## 
-
