--- a/_posts/trade/stock-course/2024-06-02-Trend.md
+++ b/_posts/trade/stock-course/2024-06-02-Trend.md
@@ -8,11 +8,34 @@ description:
 published:  false
 ---
 
-市场中赚钱的核心，赚大钱的奥秘，所有都是围绕趋势的。
-炒股交易，你可以什么都不知道，什么都不学，但是想要赚钱，赚大钱就必须对趋势有极度深刻的理解，体悟。
-我的期货经历中老h告诉本楼主，这个市场中没有什么值得你崇拜的，唯一值得你崇拜的就是趋势。
+这个市场中没有什么值得你崇拜的，唯一值得你崇拜的就是趋势。
+市场中赚钱的核心，赚大钱的奥秘，所有的一切都必须围绕趋势展开。
+炒股交易，你可以什么都不学，什么都不知道，但你一定要对趋势有极度深刻的理解，体悟。
+
+如果你还是在搞道氏理论那一套，更高的高点，更高的低点，就是上涨趋势；
+还在搞以什么划分市场，比如60日均线，60日以上就是多头趋势，60日以下就是空头趋势，
+还在画什么趋势线这些，趋势线以上就是多头趋势，跌破就是空头趋势，
+那么你对趋势的理解还没入门。
+
+不说其他的，最核心的一点就是：没得任何操作指导意义。
+炒股交易，只有看和干。
+以道氏理论举例：价格由10块涨到20块，然后由20块跌到10.01，再由10.01涨到20.01块，再由20.01跌到9块。
+这是你只能止损出局了。
+按道氏理论来说，多头趋势，但你明明赚了一倍，却一直要拿到10.01，抗个来回，过山车，只赚1分钱。
+在杰西利物莫成名前后，道氏理论还只是华尔街日报的几篇零散文章，在道氏理论连毛都没有的时候，
+在杰西之前的成功大作手已经有几代人了。
+
+以60日划分市场举例，震荡行情中可能反复穿越60日均线，这时候你反复的开平仓吗？
+上穿60日均线，你做多，OK，再次下跌，反穿跌破60日均线，这时你平多翻空？
+就这样随着震荡，反复的穿越60日均线，你反复的开平仓，多翻空，空翻多？
+
+以趋势线划分，先不说那么多趋势线，你具体以那一条为准，假设主力故意洗盘，
+直接跌破趋势线，你平仓止盈，然后主力第二日直接跳空高开，涨停，你追还是不追？
+你追进去之后，假设再次暴跌，又跌破趋势线，你止损平仓吗？
+在走势的整个过程中，很可能会加速，你要改趋势线吗？
 
 还是以经典的，科学的5W1H法来了解趋势。
+
 ## What，趋势是什么？什么是趋势？
 
 ## 
