--- a/_posts/story/2024-05-09-Why-Stock.md
+++ b/_posts/story/2024-05-09-Why-Stock.md
@@ -38,11 +38,14 @@ published: false
 https://xueqiu.com/8690330487/113780354
 我一个大学同学，做机械设计的。毕业后去了南京一家效益很好的国企，娶了一个漂亮的高中同学。当大家都还在上海打拼的时候，他已经买房了，也买车了，车还是途观。大家都觉得他很如意。
 
-父母在身边，家里有娇妻，工作有盼头。2015年股市大火，他赚了很多，从此信心大涨，把家里的现金70万全部投入了股市，然后跟银行贷款，还接入场外配资4倍杠杆。在中车停盘前买入这只股票。后面的故事大家应该猜得到。复盘后连续跌停，无法卖出止损，大家可以去看一下k线图。然后欠了银行和配资公司一两百多万。配资公司找上门也还不出钱。
+父母在身边，家里有娇妻，工作有盼头。2015年股市大火，他赚了很多，从此信心大涨，把家里的现金70万全部投入了股市，然后跟银行贷款，还接入场外配资4倍杠杆。
+在中车停盘前买入这只股票。后面的故事大家应该猜得到。复盘后连续跌停，无法卖出止损，大家可以去看一下k线图。然后欠了银行和配资公司一两百多万。配资公司找上门也还不出钱。
 
-后面的事情就像电影里一样。配资公司先到单位闹，然后单位把他开除了。配资公司再到家里闹，然后车子卖了，房子卖掉了还了一部分钱，小娇妻也含恨离婚了，配资公司到父母家里闹，他大哥想帮他把剩下的还了，大嫂不同意。
+后面的事情就像电影里一样。配资公司先到单位闹，然后单位把他开除了。配资公司再到家里闹，然后车子卖了，房子卖掉了还了一部分钱，
+小娇妻也含恨离婚了，配资公司到父母家里闹， 他大哥想帮他把剩下的还了，大嫂不同意。
 
-我这同学也硬气，直接逃了。在我们母校的公共自习室躲了一个多月。唉，从幸福美满到四处流窜也就短短几个月。这个故事到此结束，现在没人能联系上我同学，是不是被人干掉了也不知道。更讽刺的是，他如果那套房子没有卖，拿到2016年再卖，欠的钱都能还清咯。
+我这同学也硬气，直接逃了。在我们母校的公共自习室躲了一个多月。唉，从幸福美满到四处流窜也就短短几个月。
+这个故事到此结束，现在没人能联系上我同学，是不是被人干掉了也不知道。更讽刺的是，他如果那套房子没有卖，拿到2016年再卖，欠的钱都能还清咯。
 ## 人物构建
 男一号：寒门贵子的典型代表，所有世俗意义上的成功典范，应试教育的，职场的，但是结果却是最惨的。
 钱亏光了，买房的首付，爹妈死了，校园恋情几年的恋爱结婚对象跑了，工作丢了，就是15年股灾的事情，惨烈。
