--- a/_posts/story/Rebellion-Awareness-World/2024-08-18-My-Story.md
+++ b/_posts/story/Rebellion-Awareness-World/2024-08-18-My-Story.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 我开启的故事
+title:  意识革命，梦的异世界，意识的梦世界，意识帝国，意识的梦，我只是个普通人，意识黑客，物反的异世界，意识界，反的异世界，反的意识界，颠倒梦想，
 category: story
 tags:
 keywords:
@@ -8,18 +8,145 @@ description: 献给自己的礼物。
 published: false
 ---
 
+小说名字？这个主要讲的是人类的自由与解放的故事，映射了资本主义，人工智能，机械革命，
+
+对，其中还会引入梦境的因素，而且比例和重要性非常高。
+
 一定要是一个人能单独完成的事情。
 ## 背景设定
 2323年，地球在人类的贪欲下所有资源采伐几近枯竭，并且因为最后仅存的一点能源爆发了第三次世界大战，整个地球变成了一片荒芜，
 要么是荒漠，要么是海洋，要么是冰川，全部是一毛不拔的极端环境。
 而且太阳作为一种稳定，高效的能源，直接被顶层的占领了。
+男2号是救世主，这些无法面对现实世界人的救世主，
 
 而所有的底层人从出生起就被自动接入脑机？不对应该是一种人机，人体生物能发电，脑力成为计算资源，
 
+人为制造匮乏，贫穷，我觉得这个可能更好。可以首先是上面这个，然后后面再一层，之后再一层。或许所有都只是一场较长的噩梦。
+## 故事背景
+大概是人类发明脑机之后，然后所有人直接沉迷到这个幻境中，人脑提供巨大算力资源，以后的货币就是算力。随着人们使用这个母体次数越来越多，
+越来月频繁，有的人干脆直接不下线了。于此同时，有一拨人看到了脑机带来的世界末日，选择了出走，然后了很多人患上了脑机综合征，类似网瘾的，毒瘾的综合征，
+这波人离开之后，去另外的地方建立了自己的新国家。
+
+脑机国为了避免崩溃，会不断的入侵其他国家，毁灭他们的文明，然后将他们奴役，丢到脑机里面去。
+## 三个大段落
+### 1. 猪脚的觉醒；
+所有异化的，都是威胁，是不安全，不稳定的因素。 域托匹亚
+觉醒：一切不过是同化，文化，教育，社会价值观，欲望等给人类的编码，那么想要从这里觉醒的话，就必须的欲不欲，清洗掉所有外界强加，输入到我脑中的东西，
+那么能做的就是：所有的都是那么令人痛苦，那么要做的就是：逆向编码，弄清楚自身为什么这么痛苦，为什么会被如此编码，也即弄清人，人性本水。
+第二个方式就是：静之以徐清，坐忘的境界，然后用意识观照，看清发生在自己身上的一切。
+终于在99 81天后，终于从母体中觉醒了，而这个日期，也对应到先知国预言救世主诞生的日期。
+真正的救世主是会自我觉醒的，能够完成自我救赎。
+#### 1.1猪脚怎么去到先知国的
+是自己一路逃脱所有的追杀后，到的，还是先知国的人来迎接的；后面救世主的考验，是让他回归到母体？
+人类不会走弯路，不会重蹈覆辙的世界，有什么错？和狗逼中国父母一模一样。
+觉醒的人会被直升机之类的直接放逐到先知国？
+#### 1.2 救世主的考验
+
+#### 有个极度听话的人
+### 2. 先知国的陷落
+母体需要不断的新的脑机接入，更那个的应该是新的变量，不同的思想，文化之类，不然就会崩溃。
+虽然脑机男女能够孕育生命，但因为都是意识，同化的产物，所以并没有任何不同。
+所以需要攻打宪治国。
+### 3. 母体的毁灭
 
 
+什么是真，什么又是假，没有假的，何以来真，真即是假，假即使真，真不已与假，假不易于真，
+摧毁母体，拯救人类，说不定需要被拯救是你们？
 
-认为制造匮乏，贫穷，我觉得这个可能更好。可以首先是上面这个，然后后面再一层，之后再一层。或许所有都只是一场较长的噩梦。
+怎么确定你不是在虚幻的母体里面生存的了？即使你看到了母体，就说明你当前是在现实？你看到的现实或许只是另一个更高维度的母体之中？
+这个是在母体中遇到一个人探讨的问题。
+所以先知国的国民经常打坐，不停的达到更高层次的忘我境界，因为是什么我了？说不定只是文化，意识形态，价值观的编码罢了。
+如果你的生活被人安排，会说什么，会怎么选择，会做什么，都是能够预测的，那你还是你吗？
+
+**故事的核心主线就是：摧毁母体。**
+怎么摧毁？直接炸掉？所有人的脑机都是连接上去的，如果直接摧毁，所有人都会陷入无尽的沉睡。
+所以必须得有一个人进入母体，像所有人展示：他们活在幻梦之中，而进入的这个人明明是已经“自杀”被母体驱逐的，
+再次连接母体，极有可能因为排异反应，被直接杀死。
+在摧毁的这个过程中，很多人死亡了，牺牲了，而猪脚却必须承担这些，继续前进。
+而男2却蛊惑男1，如果放弃挣扎，就能直接在母体中复活死去的人。
+
+
+向所有人展示什么？？？
+男一号是怎么逃出来的？逃出来之后，是怎样到达根据地的？
+逃出来的这群人在哪里建立了根据地？？男一和根据地的某个女猪恋爱了，
+根据地，其实也在不停的抵抗着母体的入侵，而母体的入侵是因为，没有新鲜的脑体介入，它就会越来越不稳定，直到崩溃。
+
+男一号是怎么拥有救世主的身份的？怎么成为救世主的？他是如何觉醒的？？
+直接展示神迹，神罚，各种洪水，末日之类的，然后揭示他们吃的，真实的世界是怎样的。
+
+此时的人类世界是怎样的？世界末日镜像，还是正常的，还是普通人成了社会底层？
+所有一切都联网了，所有一切全部映射了，成了数字，所有人都活在母体中，除了防抗组织。
+
+母体中的先知会面：
+你怎么知道什么是真实，什么是虚假，你怎么知道他们就不喜欢这种幻境中生活了？存在即真理。
+所有的命运都是人类自己选的。
+
+人类无法面对一件事，就是第三次世界大战后，地球被混灭，所有人类文明消失殆尽，这是人类无法接受的事情，
+所以越来越多的人进入母体。同时这和一个人的推手有关系，
+
+先要打败，杀掉男2号，之后需要个人进入到母体，
+活在母体的人不过是不断重复过去的历史，比现实社会晚了100年。出来之后了？离开母体，怎么面对现实世界了。
+母体里面一日三餐全是山珍海味，要撒有撒，离开母体之后，卵都没有，每天吃稀饭，咽酸菜，吃馒头，更别说什么丰富的娱乐活动了。
+先知国就是道德经中理想国的描述，道德经中阐述的智慧组成的国家。
+对了先知国是在一个非常隐蔽的地方，必须得内部人才能放行，而且他们只接受两种人：1.从母体中觉醒的人；2.没接触过母体的人。
+后面脑体国攻打先知国，被其中一个人出卖了，背叛了，因为它觉得这种所谓的理想国，不过只是另外一种形式的母体。
+所以他们决定面对残酷的现实，重新改造自然世界，重新建立一个王国。
+对的，先知国外面全部都被脑机国的占领了（是他们的机器人，还是？）
+发明了人形机器，也就是连接到母体中的个人，然后由人操作的机器人，5感都是通过感应器造的，然后人的意识来控制的，
+不过了，所有真正的人在他看来不过了怪兽？？逃犯？先知国的人会被抓走，然后丢到母体中，悬赏通缉犯，一个多少钱。
+同样从母体中觉醒的人会被直接射杀？
+你是选择真实清醒痛苦的或者，还是选择醉生梦死快乐的活着？
+
+先知国有一种方式可以连接到母体中，怎么连接的？先知直接通过自己的意识入侵。
+因为万物互联么，所以直接通过电线，或者什么之类的东西就能侵入。
+
+## 然后小说每一章都有一个主题
+比如巨人中的旁观者局外人，梦想，自由等等，不过了每个主题都是通过这几个人来表现的。
+所有觉醒者都有能力直接入侵被母体控制的联网物体，或者让其瘫痪。
+所有人的人生剧本，都只是之前社会实践中早已写好的剧本，
+母体是一个二叉树，金字塔，神树？
+就是一个人是被悬吊的，类似受难者耶稣的，代表了人活着本身的承担，
+然后头部被个宇航员式的头盔，身体穿着，或者说被一层多分子膜覆盖，嘴巴连着了食管，肛门连接了拉屎管，生殖器连接排尿管，
+人自然死亡之后，直接被丢到某个通道里面，化成食物。然后整个的图景了就是无穷无尽的人类被悬挂在这里，遮天蔽日，把最上面的人工太阳都遮蔽了，
+一个被悬挂的人了就是受难的耶稣，
+
+### 
+如果我不是救世主，被这些人形机杀了，你们怎么办了？不好意思，为了拯救我的族人，即使死一个人也在所不惜。
+另外一个人持有不同观点，然后就争斗起来了，这就是一个主题。
+### 救赎
+## 牢笼
+主角觉得一切组织，人际关系，等等全部都是牢笼，都是为了囚禁他所设立的。
+因为它的经历本身就是从小到大被囚禁过的，
+### 负罪
+### 真实与虚假的感情
+男主在母体中有一个青梅竹马的对象，他们之间有非常深厚的羁绊，感情，
+但是男主在觉醒之后，却在极度的否定这段感情，如果这段感情是假的，那么你为何这么痛苦，
+如果不是真的，你又为何要这么极度的否定？如果真是假的，你只会有被骗后的愤怒，但是你被骗后有什么损失吗？
+如果一个事物的目的就是事物本身，那么就是真。
+### 还有一个人
+从母体中觉醒，然后又在域托匹亚中生存了一段时间的，他们必须喝下一种汤药，忘记自己曾在域托匹亚生活过的现实，
+然后他们几个人，非常少的，准备去开拓自己新的根据地。
+## 猪脚的成长
+主角的能力是不断加强的
+1.我不想要改变，我只想这样的日子天长地久，永远持续下去，
+## 模仿进击的巨人中的例子
+比如尤米尔与希斯特里亚，在生死存亡之季，尤米尔展现了自己的真身，本着慷慨付死的决心，向希斯特里亚讲了一个道理就是：
+挺起头，骄傲的活，为自己活。
+
+## 故事的开始
+yutopiya
+域托匹亚的陷落，所有人在最绝望的时候，祈祷救世主的降临，而这时救世主的确降临了，并且他一招就当下了所有人射向自己的麻醉枪，
+再过一会，所有人形机都向救世主单膝跪地，并且高喊“女皇万岁万岁万万岁”，然后救世主轻易下了一个命令之后，所有的人形机都直接撤退了。
+虽然域托匹亚不少建筑，交通被摧毁了，但是幸免于难的人们开始计划重建家园，会开集会探讨。
+
+其实这一切都是假的，是母体为了欺骗他们融入母体后：让他们的大脑的幻想给自己重新编程，编织的幻梦。
+真正的域托匹亚早已毁灭，所有的建筑，农田，交通等等，只有少数人逃到了域托匹亚的地底建立起了根据地，
+而他们要做的就是拯救自己的人民。而他们所谓的救世主败在了男2号的手下，
+同样的母体也为它单独设计了程序，就是让它一直在做着救世主，英雄的美梦。甚至让他自己在里面体验挫败感，绝望感等等，
+然后由绝望之后的成功，达到一种全能的自恋，自我感动。每个人的命运都是自己选择的。是一种自我实现。
+这时候就需要人去拯救他，他的确是救世主，不过现在还没完全觉醒，它经历的磨练还不够
+
+
 ## 最本质的矛盾，最终的追求是什么？
 人个体的觉醒，最终的自由，以及全人类的自由，创造一个公平，没有奴役，没有剥削，压迫的世界。
 男二号所做的就是，用ai，用计算机来控制所有的人，用感官的欺骗来满足所有人，生活在一种不真实，充满并满足幻象的乌托邦。
