--- a/_posts/dog-cunt-parent/2024-08-28-Object.md
+++ b/_posts/dog-cunt-parent/2024-08-28-Object.md
@@ -8,9 +8,13 @@ description:
 published: false
 ---
 
+你觉得两个人在一起最重要的是什么？
+
+
 ## 女1
 现在真的是一团乱麻啊。
-我看你这头像，你是信佛还是信道了    
+假如结婚，你想收多少彩礼，很直接的问题，丢给女生，主要是看看他的反应和情商。
+
 
 最核心的问题，大雷是：为撒到这个年纪还没谈对象？
 
@@ -26,10 +30,13 @@ published: false
 第五，问他喜欢吃什么？喜欢吃什么家常菜，一般家里谁做饭？一般来说，妈妈承担家务的家庭大概率他也会一些，
 
 第六，你直接问他，假如结婚，你想收多少彩礼，很直接的问题，丢给女生，主要是看看他的反应和情商。
-如果这个女生对你也有好感，她可能会说多少钱都不重要，重要的是两个人在一起和睦，彩礼可以让家长们去商量，调皮一些的女生可能会说，我要是爱上你，我就不要彩礼。这样的女生情商都比较高。如果这个女生告诉你少于多少多少万，比如少于30万不行，那这个女生不管是对你的好感度还是情商上来讲都不高，趁早说拜拜。
+如果这个女生对你也有好感，她可能会说多少钱都不重要，重要的是两个人在一起和睦，彩礼可以让家长们去商量，
+调皮一些的女生可能会说，我要是爱上你，我就不要彩礼。这样的女生情商都比较高。
+如果这个女生告诉你少于多少多少万，比如少于30万不行，那这个女生不管是对你的好感度还是情商上来讲都不高，趁早说拜拜。
 
 第七，即是最。重要的也是最难的，就是了解一下他过去谈了几段恋爱，分手的原因是什么，但是这个问题我们不能直接问，现在的女生很聪明，你直接问是得不到真实答案的，
-我们可以问问她，你觉得心动的男生是什么样的？通过这个问题来大致判断她过去的情感经历。如果女生说只要感觉对了，什么都无所谓，那这种女生呢，大概率不会太靠谱，因为他很容易情绪化，感觉这个东西啊，来得快，去的也快。那如果女生回答某些具体的品质，
+我们可以问问她，你觉得心动的男生是什么样的？通过这个问题来大致判断她过去的情感经历。
+如果女生说只要感觉对了，什么都无所谓，那这种女生呢，大概率不会太靠谱，因为他很容易情绪化，感觉这个东西啊，来得快，去的也快。那如果女生回答某些具体的品质，
 
 
 第一个问题，问他周末在干嘛，如果这个男人他在周末的时候，他是打牌、喝酒，跟酒肉朋友一起去看球、聊天，就是无所事事的人
@@ -45,4 +52,5 @@ published: false
 第二，看她和父母的关系，相亲时候显得和父母关系不好，说明她家不和谐，和父母关系好，这个还不错，一切都听父母的，可能她就是没有多少主见的人。
 
 第三，观察她个人的肢体动作，微表情，还有语言。
-下意识的肢体动作，往往是内心最真实的反应，例如你说话的时候，她不专心听，或者玩手机，或者背靠在椅子上，多数就是不想听你说，从侧面也可以反应，对你的感觉并没有那么好，对相亲也没那么重视。
+下意识的肢体动作，往往是内心最真实的反应，例如你说话的时候，她不专心听，或者玩手机，或者背靠在椅子上，
+多数就是不想听你说，从侧面也可以反应，对你的感觉并没有那么好，对相亲也没那么重视。
