--- a/_posts/make-money/2024-09-09-Pig-Swine.md
+++ b/_posts/make-money/2024-09-09-Pig-Swine.md
@@ -9,9 +9,47 @@ description:
 published: false
 ---
 
-1.所有人都是你的衣食父母，
+1.所有人都是你的衣食父母，猪狗牛羊都是我们的衣食父母。
 
 
+## 一定要研究清楚人这个客体
+本质上来说这些“人”都是猪猡，释放多巴胺的受体，没钱，有大把无聊的时间，到处在寻找释放多巴胺的刺激源，
+比如性，色情，暴力，游戏，小说等等（1.研究下多巴胺）
+以游戏举例，大把的时间浪费，所以玩游戏，玩游戏的本质是什么？1.无聊，时间太多不知道干嘛；2.寻求刺激，释放多巴胺；3.寻找存在感，现实生活中毫无存在感。
+然后游戏中的付费机制就是：先让你极度的爽，爽翻天（和性交过程中，不断的口活，让你硬邦邦，快感直冲天灵盖，然后又停止口活，
+让你憋住别射，等一会继续刺激，或者直接停止口活，然后威胁你，提条件是一样的。这时候你眼睁睁的看着巨大的肉棒萎缩，快到手的射精快感消失，到手的多巴胺爽感飞了，
+让你有那种杀人的冲动，就是那种极大的失落感，极大的满足感却没有得到满足，极大的空虚感，挫败感。）
+游戏也是让你爽，爽到顶，然后设计个关卡，让你失败，产生巨大的失落感，愤怒，被拒绝，被抛弃感，然后弹框，告诉你充值就能变强，
+然后你冲了10块，得到物品，得到强化，然后通关了，那种爽感，爽到顶的感觉又回来了，所以你疯狂的冲，
+特别是每次遇到这种失败，挫败感时候，大脑立刻就反应起来，记忆起充钱后强大的感觉，那种充钱后的快感，多巴胺又来了。
+和炒股，赌博成瘾机制一样的。
+
+然后游戏中还有另外一个关于人性欲望，虚荣的点。
+就比如各种网游，虽然都是免费的，大家都在玩，好像不赚钱，但是一款游戏只需要供养极少数的，甚至就一个土豪老板就行了。
+就是满足它那种一呼百应，称王称霸，横行天下的快感，爽感，虚荣感。这就是为什么那么多游戏中的公会，帮会老大
+倾家荡产也要充值，偷挪公款都要充值的原因，因为那种权力感，那种被人一呼百应的崇拜感太爽了。
+就魔兽世界中的g团也是，什么老公加油，老板大气，不都一样的吗。
+所以很多人在我看来就是完全是低级趣味驱动的，甚至说是欲望，情绪等驱动的低等生物。
+
+2.研究成瘾机制；3.研究人性，欲望。4.流量
+观察者，局外者有非常大的优势，之前我认为的不会社交，不会搞关系等的极大劣势，也能转化为极大的优势。
+
+互联网赚钱的逻辑：绝对不是从这群屌丝身上赚钱，而是通过这群屌丝塑造的王国，提供的权力感，虚荣感等来赚钱。
+
+## 设计个案例
+### 1.流量，可以做，也可以买；
+知乎盐选免费看，搞个保存到手机桌面。
+1.怎么解决这个问题，网站，APP，小程序？
+加群，关注公众号，
+### 2.产品，刺激猪猡，让它们分泌多巴胺，满足它们人性的欲望
+看小说的是群什么人？会对什么样的产品感兴趣？游戏，视频，电影？
+赚谁的钱？广告商的，推广商的，
+### 3.成交，等价交换原则，爽感，欲望的满足=金钱。
+就比如嫖娼这事，男的就爽那么一会，就哆嗦那么一会，就付出几百，上千。
+这个过程中产生价值了？或者产生价值剥夺，抢劫了？
+我这人太没烟火气了，生活气了，不知道是怎么把老子关起来吸。妈个逼的。
+你他妈的就个纯纯傻逼，你都以为别人是像你这样的，你还以为要像对自己一样的对别人，
+这群狗逼东西都他妈的是猪猡。
 
 
 
