--- a/_posts/story/Rebellion-Awareness-World/2024-08-18-My-Story.md
+++ b/_posts/story/Rebellion-Awareness-World/2024-08-18-My-Story.md
@@ -48,6 +48,10 @@ published: false
 虽然脑机男女能够孕育生命，但因为都是意识，同化的产物，所以并没有任何不同。
 所以需要攻打宪治国。
 ### 3. 母体的毁灭
+### 4.在母体里面能够构建完美的人类，比如死去的恋人，完美的孩子
+### 5.母体里面一对恋人，虽然所有都是假的，但是感情是真的，但是这又该如何证明了？
+### 6.她会将你的一切都给毁灭的。
+
 
 
 什么是真，什么又是假，没有假的，何以来真，真即是假，假即使真，真不已与假，假不易于真，
