--- a/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
+++ b/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
@@ -112,5 +112,73 @@ published:  false
 等你看出来要暴涨，他妈的第二天肯定一字板，炒股不要用看的，对手盘交易，都在引诱对方犯错，怎么可能看出来什么。
 
 就这样吧。我的炒股交易之路到此为止。
+应该还是有巨大偏见，在巨大偏见，巨大分歧的地方行动，开平仓。
+
+去骡球，就2种：
+1.回踩20日均线；2.短期平台支撑。
+
+龙头妖股这么来理解，调整，洗盘的目的是什么？换手，充分的完全的换手。 
+换手的本质是什么？多空，市场参与者达成一致性意见，“一”，圣人抱一为天下式，开平仓都是“一”。没有套牢盘。
+所以涨停最好大阳线。
+那怎么看是否充分换手？那就是各得其所欲，走势都满足了多空双方的“自我”。
+龙头妖股底部启动，就要看它底部调整，换手是否充分。以多弱的力量就能推动涨停。
+另外一个少数时候对，多数时候错，为什么？还要看大盘走势是否支持，资金面，情绪面是否支持。
+这里有个鸡巴问题，龙头妖股必然是很少的，所以必须得天时地利人和，面面俱到。
+最主要的还是大盘走势配合把，稀薄区间连续性的暴涨，比如9.23到10.8的大盘，东方财富的走势。
+
+天时地利人和，均线：时间，空间都到位了，合二为一，时间=天时，空间=地利。
+什么时候会暴涨？就是没有人认为它会涨的时候。
+这个一般有2个：
+所有人认为它会下跌，见顶的时候。
 
 
+赚钱靠大势，靠基本面，赚大钱靠坐得住。
+## 缺点
+1.频繁交易，频繁换股，开仓，平仓太鸡巴随意了，特别是开仓；
+2.个股的走势是需要大盘配合的，大盘好时灵验，大盘不好时就不灵，所以时好时坏，时对时错，少时对，多时错。
+
+2024.11.29 
+所有走势的最终目的就是为了形成“一致性”的偏见，“一”，无论是向下的破位下跌，还是锚定效应的突破上涨，还是疯狂洗盘，震荡调整。
+最终目的都是为了筹码的充分换手，这些都涉及到这个游戏的核心规则，对手盘交易。一买就跌，一卖就涨也是同理。
+形成一致性的偏见，也就是一生二，生杀之理。
+所以龙头妖股的底部直接涨停，一字板涨停都是如此，浮动的筹码太少了，所以能够无限涨停拉升。
+所以介入的参考目标是：左侧历史有套牢盘吗？这他妈的又不对了，卧槽，
+
+煞笔，所有都基于一点：情绪。情绪才是做出买卖决策的根本原因，短线炒的就是情绪，情绪周期内无脑上涨停涨的最猛的票就完了。
+情绪消退，空仓；情绪极度悲观，一致性看跌，准备第二天大涨后再次入场。
+
+虚而不屈，动而愈出，反也者道之动，腰部涨停突破，上面盖着的阻挡是驱动继续涨停的动力。
+第一步找腰子，腰子是上次假突破的点。
+
+知易行难，因为知是你认为，你觉得，你的自视自见，而行是实际的运行中，多空交织，实际走出来的，验证出来的，不是你猜测出来的。
+正如兵无常势，水无常形，都是随机应变，随势而行，随遇而安。
+另外反也者道之动，所以很多时候正是你认为它不会涨，这里有阻挡，所以导致它上涨。
+
+## 选股
+简单，单边无锚
+1.绝对充分调整的，充分换手的，对手盘交易
+2.腰部，顶部涨停的，调整后涨停的；开盘跳空高开突破的。
+3.就是开仓赌博，涨停的最低价止损，15%
+
+你中有我，我中有你，市场总以假突破来驱动行情继续发展，比如大趋势是上涨趋势，但是中期趋势却以向下突破关键支撑作为下跌的终结，
+新一轮上涨的开始。因为这个假突破没有得到确认，所以总是有假突破。一重仓又扛不住，轻易就被洗出去。
+
+市场所有的走势就是：上涨，下跌，底部调整，腰部震荡，腰部突破再次上涨，只有这么几个阶段，不会有其他的。
+最多就加上上涨顶部的震荡，下跌中的震荡反弹。
+
+2024.12.04 大盘这里还是震荡微弱向上，不过很可能到前期高点附近开始暴涨。这里依然赚钱困难。
+龙头妖股，那种翻十倍，几倍的，必须大盘配合，走出连续性的上涨走势，或者参与者的情绪配合。最终还是落到情绪，买卖操作上。
+
+调整的本质：空间上，时间上的先后收敛，一致，一。天时地利人和。空间：地利；时间：天时；散户参与：人和。龙头妖股，天时地利人和，市场一致性选择出来的。
+### 选股流程
+1.怎么发现的？涨停。
+2.看涨停所处的位置，是否关键位置，也即长期重要阻挡位，也即腰部，顶部（顶部不过是更大一个级别的腰部）。
+3.看涨停前的调整，看涨停后的调整，调整的幅度（空间），调整的周期（时间）
+4.看左侧近期历史是否有波峰（有疑惑），有没套牢盘，其实所有的本质看的是调整是否绝对充分，也即换手绝对充分。游戏规则：对手盘交易。
+所以最好的参与机会是：经历过一大波上涨后的充分调整的再次涨停。
+5.看量能，也即参与的资金，受到市场亲耐的程度，散户介入的程度。
+6.不是近期明显锚定效应突破的，单边无锚。高以下为基，贵以贱为本，安以恐，惧为根，势以万为一。
+
+所有的功夫都要下在：如何判断：调整，换手绝对充分。
+知行合一，不知道，1=-1，1+-1=0，悟道，悟空，道即空。
+### 涨停所在位置
