--- a/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
+++ b/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
@@ -13,19 +13,22 @@ published:  false
 最近一直苦恼与无法爆赚，也就是买的股票死活不涨，然后对“冲”有了更进一步的理解。
 也就是遇长期重要阻挡后的回踩，洗盘。这个回踩洗盘空间上越剧烈，时间上越短，那么后续的行情越波澜壮阔。
 这个的道理和趋势的力度是一样的，时间空间上越短的调整说明趋势力度越强劲，比如回踩调整5日均线都破不了。
-另外，反也者道之动，所以暴涨是需要暴跌为源动力来驱动的。不跌不涨，不洗不拉，也和道德经中的将欲翁之必固张之暗合。
+另外，反也者道之动，所以暴涨是需要暴跌为源动力来驱动的。不跌不涨，不洗不拉，也和道德经中的将欲夺之必固与之暗合。
+暴涨暴跌的空间幅度，调整时间越短，近期越可能暴力拉升。还要大盘配合。
 
 所以到底是什么情况下主力会暴力拉升了？
 还是趋势级别的跃迁，扩张，“跨过顶部是天空”，老h说的那句“在所有人认为见顶的时刻，顺势做多”，原来这句话并没错，
 那么什么走势下是所有人都认为见顶的时刻了？那就是遇到历史高点后的暴跌。
-也就是最后一波多头也止盈平仓的时候，所以：止盈的点其实是开仓的点，1=-1。
+也就是最后一波多头也止盈平仓的时候，所以：止盈的点其实是开仓的点，1=-1。还是换手。
 1=-1，反过来-1=1也成立。牛熊无顶底，趋势无顶底，顶部开多，底部做空，抄顶摸底。
 举个例子就是：光启技术10.10的走势，就是突破后的止盈。同样也是绝佳的开仓点，加仓点。
 这个点，其实在熊市中的确是有非常大概率是见顶的点，一生二，二玄一，见顶，下一波拉升都有可能。但是现在是牛市。
-1=-1，色即是空，空即是色。色不异空，空不异色，受想行识亦复如是。以空为本，以无为用，以虚为体。
+1=-1，色即是空，空即是色，色不异空，空不异色，受想行识亦复如是。以空为本，以无为用，以虚为体。
 所以一直追求的正确其实就是错误，就是在一直追求错误。
+一直追求的确定性就是在一直追求不确定性。
 一直追求的所谓稳定盈利，结果就是一直的稳定亏损。
 因为并不存在，也没有什么对错。无无色空。
+悟道，悟空，空即非空。
 
 做一副揭语：
 我不是我；
@@ -34,8 +37,12 @@ published:  false
 我即是我，亦不是我，我并不真实存在。
 
 但是为什么我总在接近历史新高的点做多，却死活不涨了，如三星医疗，中国西电，这是为什么？
-你和那个江淮汽车比较一下就知道了，必须单边无锚，无人敢上车才能一骑绝尘，一飞冲天，才能暴力拉升。
-这时，我注意到了“锚”。
+（还是换手，10月8日的高点套牢盘没解套，所以正确的是：创历史新高做多，但是创历史新高后一定要涨停，因为一。
+还有一个是：如果是真突破，那么必定暴力涨停突破。所以润欣欣科技2024.11.13的走势就不对。）
+你和那个江淮汽车比较一下就知道了，必须单边无锚（之所以单边无锚还是因为暴力突破，本质上还是换手，上方没套牢盘），
+单边无锚本质上还是换手，套牢盘，只有单边才没套牢盘。
+无人敢上车才能一骑绝尘，一飞冲天，才能暴力拉升。
+这时，我注意到了“锚”。（所谓的锚只不过是一种心锚效应，挂碍，刻舟求剑，本质是一种偏见。）
 原来这些开仓的点看似很安全，因为价格在锚附近，所以你感觉，看似很安全。
 这也是为什么有时候偶尔对，但是大多数时候错。
 同样这也是为什么所有人见到暴跌后，认为见顶了，不敢介入的原因，因为当前走势是单边无锚的，
@@ -59,6 +66,14 @@ published:  false
 核心4就是反也者道之动，“冲”，反向运动提供顺向运动源动力，势能，不洗不拉。
 将固瓮之必固张之，将固弱之必固强之，将固夺之必固与之。
 核心1就是势能向动能的转化。
+（所有这些都仅仅只是描述的现象，具体要如何操作才是根本。）
+2024.12.7煞笔，老想着一大波趋势，暴力拉升，真突破，真他妈的蠢，研究来研究去，鸡巴还不如30日均线好用。
+所以江南化纤这个很可能就2个板，周一一字板，周二一字板了暴跌。
+煞笔啊，看看江南高纤，岩山科技，天茂集团，甚至奋达科技，拿个30日均线，20日均线多轻松的，非鸡巴想要捕捉大趋势，一大波拉升，暴力涨停，呵呵。
+明显的真有的话，不可能让我轻易上车，所以江南高纤明显没有。而且涨停后的陷阱太多了，各种套牢，调整。
+30日均线的唯一问题就是：底部反复调整以及二次回踩，其他的没任何问题。
+
+分歧最大的点就是开仓买入的点，也是平仓卖出的点，牛市是买入的点，熊市是卖出的点。
 
 不断创新高和“锚”的作用是相反相成的，本质就是跳出三界外，不在五行中，就是心无挂碍。
 
@@ -68,23 +83,25 @@ published:  false
 
 1=-1，你想要暴涨，就要买入暴跌，势以迅雷不及掩耳之势，所以必然是暴跌洗盘后暴涨，等你回过神，继续创新高，一字板了。
 需要去赌的，才是安全的，不确定的，犹豫的才是对的。
-1=-1=1，所以这个见顶的点很可能的确是见顶的点。
+1=-1，-1=1，所以这个见顶的点很可能的确是见顶的点。
 
-哦，这么个意思，从时间空间上来看，位置未到，时间已到。肯定有调整洗盘，
+哦，这么个意思，从时间空间上来看，位置已到，时间未到，肯定有调整洗盘，
 时间这个问题，比如调整到20日均线开始拉升就是典型的，这是个概率很高的情况走势。
 心无挂碍，无心锚，所以必然创历史新高。
 想要追求暴涨就买入暴跌，所有人认为见顶止盈平仓时，你买入。
 另外有所依仗必然被依仗所埋葬，比如蓝丰生化在6.7的支撑。
 所有相都并非实相，所以没必要求定法。
+凡所有相皆是虚妄，所以并无固定一法，也没必要去求定法。法无定法，万法皆空，空即非空。
 
 是由什么驱动的？？？空，无，虚来驱动的，无无明，亦无无明尽，反也者道之动，反到极致就是空，无，虚。
 也就是所有人都绝望，失望透顶的时候，启动，暴力拉升了。无生有。
 
 守中用冲，腰部的突破和顶部突破本质是一样的。突破后回踩或者直接遇阻。
-终于算是功德圆满了，考虑何时买就应该考虑到对手盘何时卖，也就是创历史新高，所有人认为见顶止盈卖出时，买入做多。
+考虑何时买就应该考虑到对手盘何时卖，也就是**创历史新高**，所有人认为见顶止盈卖出时，买入做多。
 呵呵。
-哦，是这么个意思，一切都以情绪为根本，情绪才是实相（错，情绪主宰大多数参与者而已）。
+哦，是这么个意思，一切都以情绪为根本，情绪才是实相（错，情绪主宰大多数散户而已）。
 你说自己功德圆满的时候就要下跌，等你万念俱灰的时候就要见底上涨。
+跳出三界外，不在五行中。
 走势最终也是为了情绪这个最终目的服务的，情绪才是导致你做出卖出决定的根本原因。
 就那个不断盘整，调整，磨你耐心的，最终还是情绪。走势没破位啊，为撒你卖了？因为磨死个人。
 情绪是第一位的。趋势是第一位的。
@@ -93,7 +110,7 @@ published:  false
 
 以空，无，虚，器为根本来操作，不以炒股为生者，是贤与炒股。
 趋势第一，规则第一，情绪第二（10.8日这个情绪也会把你带下车），以趋势，长久持仓来构建交易规则。
-1.选股：单边无锚。涨过一波，最好是创历史新高，探过顶的或者上破长期重要阻挡位的；
+1.选股：看换手，是否绝对充分，单边无锚。涨过一波，最好是创历史新高（或者经过长期单边下跌的），探过顶的或者上破长期重要阻挡位的；
 或者暴跌，长期在底部的；或者基本面改变，事件驱动的。确定性。
 2.多头趋势，120日均线辨多空；道氏理论辨多空；取交集还是并集？并集，为了长久持仓。
 3.回踩20日或者30日均线，买入做多；守中用冲，次级别中阳后介入
@@ -117,10 +134,11 @@ published:  false
 去骡球，就2种：
 1.回踩20日均线；2.短期平台支撑。
 
-龙头妖股这么来理解，调整，洗盘的目的是什么？换手，充分的完全的换手。 
+龙头妖股这么来理解，调整，震荡，洗盘的目的是什么？换手，充分的完全的换手。（这里方向正确了。）对手盘交易，市场游戏的本质规则。 
 换手的本质是什么？多空，市场参与者达成一致性意见，“一”，圣人抱一为天下式，开平仓都是“一”。没有套牢盘。
 所以涨停最好大阳线。
-那怎么看是否充分换手？那就是各得其所欲，走势都满足了多空双方的“自我”。
+那怎么看是否充分换手？那就是各得其所欲，走势都满足了多空双方的“自我”。（也就是市场多空分歧最大的地方，都认为自己是对的，沾沾自喜的时候。）
+（也就是长期重要阻挡位置，绝大多数人认为市场见顶了，走势见顶的地方，顺势做多。也就是历史最高点，创新高后的涨停。）
 龙头妖股底部启动，就要看它底部调整，换手是否充分。以多弱的力量就能推动涨停。
 另外一个少数时候对，多数时候错，为什么？还要看大盘走势是否支持，资金面，情绪面是否支持。
 这里有个鸡巴问题，龙头妖股必然是很少的，所以必须得天时地利人和，面面俱到。
@@ -139,13 +157,13 @@ published:  false
 
 2024.11.29 
 所有走势的最终目的就是为了形成“一致性”的偏见，“一”，无论是向下的破位下跌，还是锚定效应的突破上涨，还是疯狂洗盘，震荡调整。
-最终目的都是为了筹码的充分换手，这些都涉及到这个游戏的核心规则，对手盘交易。一买就跌，一卖就涨也是同理。
-形成一致性的偏见，也就是一生二，生杀之理。
+最终目的都是为了筹码的充分换手，这些都涉及到这个游戏的核心规则，对手盘交易。一买就跌，一卖就涨也是同理。买点=卖点。
+形成一致性的偏见，之后分歧，变盘，也就是一生二，生杀之理。
 所以龙头妖股的底部直接涨停，一字板涨停都是如此，浮动的筹码太少了，所以能够无限涨停拉升。
-所以介入的参考目标是：左侧历史有套牢盘吗？这他妈的又不对了，卧槽，
+所以介入的参考目标是：左侧历史有套牢盘吗？这他妈的又不对了，卧槽，哈哈哈，左侧的历史套牢盘只是烟雾弹，时灵时不灵，关键时刻一定不灵。
 
 煞笔，所有都基于一点：情绪。情绪才是做出买卖决策的根本原因，短线炒的就是情绪，情绪周期内无脑上涨停涨的最猛的票就完了。
-情绪消退，空仓；情绪极度悲观，一致性看跌，准备第二天大涨后再次入场。
+情绪消退，空仓；情绪极度悲观，一致性看跌，准备第二天再次入场。
 
 虚而不屈，动而愈出，反也者道之动，腰部涨停突破，上面盖着的阻挡是驱动继续涨停的动力。
 第一步找腰子，腰子是上次假突破的点。
@@ -178,7 +196,68 @@ published:  false
 所以最好的参与机会是：经历过一大波上涨后的充分调整的再次涨停。
 5.看量能，也即参与的资金，受到市场亲耐的程度，散户介入的程度。
 6.不是近期明显锚定效应突破的，单边无锚。高以下为基，贵以贱为本，安以恐，惧为根，势以万为一。
+### 选股进阶 2024.12.6
+1.涨停，看涨停所处位置，至少要是长期重要阻挡突破后的回踩再涨停
+2.换手绝对充分，无套牢盘
+3.单边无锚，抛锚
+4.无左侧历史近期近距离套牢盘
+5.资金，量能
+6.简单，走势越走越简单，调整幅度空间，时间越来越小，收敛
+7.看强弱，依强弱排行，择强汰弱，做多最强，强者恒强
 
 所有的功夫都要下在：如何判断：调整，换手绝对充分。
 知行合一，不知道，1=-1，1+-1=0，悟道，悟空，道即空。
 ### 涨停所在位置
+其实涨停就几个作用，或者说分几种：
+1.换手绝对充分后的涨停
+2.帮主力解除套牢盘，主力借力打力
+3.大盘看涨，确定性上涨，次级别趋势到顶后的假突破，多头陷阱，套人
+
+2024.12.5 宏达新材近期的走势很有研究的必要，看涨停，不仅要看阻挡的突破还要看上方的阻挡，既要看多头，也要看空头。
+
+奋达科技就是守护守出来的，看过小猫，猎豹，老虎捕捉猎物吗？
+1.长期的蹲守，静止，心若止水，极静才能极动；
+2.老虎，猎豹每次狩猎都成功吗？很显然不可能，所有掠食者，最顶尖的掠食者也不可能做到100%的成功率，百发百中，这不可能，天道使然。
+假设真能100%成功，那么这个物种必然泛滥成灾，即使真的如澳洲的外来物种入侵，当地的自然生态也无法承受，必定有个极限，
+然后开始物种内部的崩溃。
+所以你追求“一”就是煞笔，反而“不一而一”才是真的一，万事万物必然有例外。很可能人类自身就是物种进化的例外。
+同样的，令狐冲的那个感慨：既然不能融而为一，又何必强求，当求随心所欲，行乎其不得不行，止乎其不得不至。
+所以，龙头妖股，底部几板断档，各种鸟走势，完全看的就是：你对市场的理解，对自身的理解。赌。
+
+一切从“换手”，即对手盘交易，看是否绝对充分。
+
+太多那种底部明显近期阻挡的一板涨停突破了。
+### 排除法
+底部不碰，一板不碰，非单边无锚不碰，先假定所有都不太可能是龙头妖股，就是那种碰到阻挡会有回测，不会直接连扳突破。
+
+炒股赚钱太难了，卧槽你妈逼的，昨天大赚，今天大亏，看似很暴利，其实只是巨幅波动，空欢喜。
+
+
+知行合一为什么这么难？因为具体的行是由当时的具体情况决定的。
+比如江南高纤，在2.9的位置是强阻挡，但是到时候具体能否突破，完全是看历史过去在此到底有多少套牢盘，有多少止盈盘对突破这个没信心，这是空头力量，
+还要看多头，具体到时场外有多少看好此股的资金，多少打板资金，多少继续持仓看涨的人，所有的合力决定到时候这个强阻挡能否突破。
+这个既是分歧，也是悬念。假设这个地方突破了，收盘涨停的，那么后续就会一字板，就没参与机会了。
+这个就和向下假突破是一个道理，市场是准许假突破存在的，因为假突破没有得到二次确认，所以趋势并没改变（未必，也不一定需要二次确认，这就是市场吊诡的地方），
+但是你这时却因为向下假突破关键位置止损了，被洗盘洗掉了。但是如果你不止损，那么等这个“假突破”得到二次确认之后，
+第二天必然大幅低开，甚至一字板跌停，这时你止损，那损失就大了。
+这和假设这次是向上的真突破，那么必然大幅高开，甚至向上突破后第二日直接一字板涨停是同理，根本没法下嘴。
+无法采取具体操作依据，所以几乎没有任何意义。即使大幅高开依然可能是假突破，也可能历史阻挡再次向下回踩支撑调整，你还是只能吃瘪吃耳光。
+所以一切都是赌，这也是不确定性的由来。
+所以在底部，关键支撑开仓并不安全，特别是期货，而且对手盘交易，不破不换手，大概率必然向下假突破。
+最安全的其实是创新高后开仓做多，因为这时候多头最强。只是大多数时候都是假突破，或者突破创新高后，再次向下区间调整，
+所以你创新高后开仓做多后要假定是趋势，走势会越来越强，所以不应该收在5日均线以下。但是大多数情况下你是错的会止损，除非大盘配合。
+其实这时候你拿个10%做止损比底部拿个10%做止损要难被打止损的多。
+一切都是赌，都是赌趋势，既然如此为何不在创历史新高后赌？所以就是
+1.创历史新高；2.涨停之后的调整买入。（呵呵，这里同样有问题：就是涨停后不调整直接继续涨停，以及涨停后大幅高开却继续调整，破涨停当天最低点的问题。）
+
+所以接近新高后涨停后调整收敛就会暴力拉升有一波大行情的认知是错的，还是在求定法。但是在这里开仓赌却是对的。
+知道最关键位置的突破后开仓去赌就是正确的操作，只是结果出错，大多数情况下止损出局的结局依然是无法避免的，
+但这并不是错误而是正确，这才是“不一而一”。
+所以之前经常他妈的时对时错，而且经常错偶尔对，这他妈太正常了，而且这本身就符合市场走势。
+其实只要走势强到一定程度，简单到一定程度就可以开仓介入。反复，调整，强弱在你可接受的范围之内。
+
+换手，一致，分歧，一致即一，分歧即二，一生二，二玄一。一直分歧一直涨，
+一致转分歧（一生二），对应到走势就是明显的锚定效应的突破,连续性的一字板，然后暴跌。
+分歧转一致（二玄一），就是调整的不断收敛，多空力度和而为一，合而为一。
+再加上大盘的走势，情绪的和而为一，同理的天时地利人和，所以何时开平仓一目了然，圣人抱一为天下式。
+炒股，一个一字就够了。
