--- a/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
+++ b/_posts/confucian-buddha-tao/tao/2024-11-09-One-Word.md
@@ -110,8 +110,8 @@ published:  false
 
 以空，无，虚，器为根本来操作，不以炒股为生者，是贤与炒股。
 趋势第一，规则第一，情绪第二（10.8日这个情绪也会把你带下车），以趋势，长久持仓来构建交易规则。
-1.选股：看换手，是否绝对充分，单边无锚。涨过一波，最好是创历史新高（或者经过长期单边下跌的），探过顶的或者上破长期重要阻挡位的；
-或者暴跌，长期在底部的；或者基本面改变，事件驱动的。确定性。
+1.选股：看换手，是否绝对充分，调整是否绝对充分，是否有套牢盘，是否单边无锚。涨过一波，最好是创历史新高（或者经过长期单边下跌的），探过顶的或者上破长期重要阻挡位的；
+或者基本面改变，事件驱动的。确定性。
 2.多头趋势，120日均线辨多空；道氏理论辨多空；取交集还是并集？并集，为了长久持仓。
 3.回踩20日或者30日均线，买入做多；守中用冲，次级别中阳后介入
 （具体20日，还是30日，看感觉，10%止损没那么容易被干掉,
@@ -121,12 +121,12 @@ published:  false
 （一般是反抽120均线后暴跌确认；头肩顶破位后暴跌确认；回踩20日均线后反抽，暴跌确认。
 都只是个概率。）
 5.买入后死活不涨怎么办？哎，懒鸡巴搞了，就看自身对走势的理解来选把。
-6.放弃单边，调整建仓，守中用冲。没那个胆魄，就不要不自量力，再说一生二，任何情况都可能。
+6.放弃单边（错，只做单边），调整建仓，守中用冲。没那个胆魄，就不要不自量力，再说一生二，任何情况都可能。
 
 你看看今天这个2024.11.12，光启技术，按规则来的话，今天应该继续持有；还有神宇股份也是，根本撒鸡巴都不用去想，去判断，保持无知无虑，空无。
 20日均线，东方财富，赢时胜，你妈逼的多好的走势啊。当然有没有20日线买入后继续调整的，甚至买入后暴跌的，当然有。
 不然你妈逼的，人人拿个20日均线就能来市场抢钱了，有这种事吗？再说20日均线买入后继续调整，你他妈的不是神仙，任何方法都不可能一买就涨，就暴涨。
-等你看出来要暴涨，他妈的第二天肯定一字板，炒股不要用看的，对手盘交易，都在引诱对方犯错，怎么可能看出来什么。
+等你看出来要暴涨，他妈的第二天肯定一字板，炒股不要用看的，盯盘毫无意义，对手盘交易，都在引诱对方犯错，怎么可能看出来什么。
 
 就这样吧。我的炒股交易之路到此为止。
 应该还是有巨大偏见，在巨大偏见，巨大分歧的地方行动，开平仓。
@@ -134,13 +134,13 @@ published:  false
 去骡球，就2种：
 1.回踩20日均线；2.短期平台支撑。
 
-龙头妖股这么来理解，调整，震荡，洗盘的目的是什么？换手，充分的完全的换手。（这里方向正确了。）对手盘交易，市场游戏的本质规则。 
+龙头妖股这么来理解，调整，震荡，洗盘的目的是什么？换手，充分的绝对的完全的换手。（这里方向正确了。）对手盘交易，市场游戏的本质规则决定的。 
 换手的本质是什么？多空，市场参与者达成一致性意见，“一”，圣人抱一为天下式，开平仓都是“一”。没有套牢盘。
 所以涨停最好大阳线。
 那怎么看是否充分换手？那就是各得其所欲，走势都满足了多空双方的“自我”。（也就是市场多空分歧最大的地方，都认为自己是对的，沾沾自喜的时候。）
 （也就是长期重要阻挡位置，绝大多数人认为市场见顶了，走势见顶的地方，顺势做多。也就是历史最高点，创新高后的涨停。）
 龙头妖股底部启动，就要看它底部调整，换手是否充分。以多弱的力量就能推动涨停。
-另外一个少数时候对，多数时候错，为什么？还要看大盘走势是否支持，资金面，情绪面是否支持。
+另外一个少数时候对，多数时候错，为什么？（这是必然的，即使你的认知，操作是正确的，多数情况下出错也是必然的。） 还要看大盘走势是否支持，资金面，情绪面是否支持。
 这里有个鸡巴问题，龙头妖股必然是很少的，所以必须得天时地利人和，面面俱到。
 最主要的还是大盘走势配合把，稀薄区间连续性的暴涨，比如9.23到10.8的大盘，东方财富的走势。
 
@@ -156,7 +156,8 @@ published:  false
 2.个股的走势是需要大盘配合的，大盘好时灵验，大盘不好时就不灵，所以时好时坏，时对时错，少时对，多时错。
 
 2024.11.29 
-所有走势的最终目的就是为了形成“一致性”的偏见，“一”，无论是向下的破位下跌，还是锚定效应的突破上涨，还是疯狂洗盘，震荡调整。
+所有走势的最终目的就是为了形成“一致性”的偏见，也即万相归一，无论怎么走，拉升阶段再回头看过去的走势，都如浮尘蚍蜉。
+“一”，无论是向下的破位下跌，还是锚定效应的突破上涨，还是疯狂洗盘，震荡调整。
 最终目的都是为了筹码的充分换手，这些都涉及到这个游戏的核心规则，对手盘交易。一买就跌，一卖就涨也是同理。买点=卖点。
 形成一致性的偏见，之后分歧，变盘，也就是一生二，生杀之理。
 所以龙头妖股的底部直接涨停，一字板涨停都是如此，浮动的筹码太少了，所以能够无限涨停拉升。
@@ -178,8 +179,10 @@ published:  false
 2.腰部，顶部涨停的，调整后涨停的；开盘跳空高开突破的。
 3.就是开仓赌博，涨停的最低价止损，15%
 
-你中有我，我中有你，市场总以假突破来驱动行情继续发展，比如大趋势是上涨趋势，但是中期趋势却以向下突破关键支撑作为下跌的终结，
-新一轮上涨的开始。因为这个假突破没有得到确认，所以总是有假突破。一重仓又扛不住，轻易就被洗出去。
+你中有我，我中有你，市场总以假突破来驱动行情继续发展，这是由本质的游戏规则：对手盘交易决定的。
+也是由事物发展，阴阳相生，道的发展特征决定的。
+比如大趋势是上涨趋势，但是中期趋势却以向下突破关键支撑作为下跌的终结，新一轮上涨的开始。
+因为这个假突破没有得到确认，所以总是有假突破。一重仓又扛不住，轻易就被洗出去。
 
 市场所有的走势就是：上涨，下跌，底部调整，腰部震荡，腰部突破再次上涨，只有这么几个阶段，不会有其他的。
 最多就加上上涨顶部的震荡，下跌中的震荡反弹。
@@ -197,7 +200,7 @@ published:  false
 5.看量能，也即参与的资金，受到市场亲耐的程度，散户介入的程度。
 6.不是近期明显锚定效应突破的，单边无锚。高以下为基，贵以贱为本，安以恐，惧为根，势以万为一。
 ### 选股进阶 2024.12.6
-1.涨停，看涨停所处位置，至少要是长期重要阻挡突破后的回踩再涨停
+1.涨停，看涨停所处位置，至少要是长期重要阻挡突破后的回踩再涨停（长期重要支撑位上的涨停）
 2.换手绝对充分，无套牢盘
 3.单边无锚，抛锚
 4.无左侧历史近期近距离套牢盘
@@ -206,7 +209,8 @@ published:  false
 7.看强弱，依强弱排行，择强汰弱，做多最强，强者恒强
 
 所有的功夫都要下在：如何判断：调整，换手绝对充分。
-知行合一，不知道，1=-1，1+-1=0，悟道，悟空，道即空。
+单边调整，十字星调整，
+知行合一，不知道，1=-1，1+-1=0，悟道，悟空，道即空，空即非空。
 ### 涨停所在位置
 其实涨停就几个作用，或者说分几种：
 1.换手绝对充分后的涨停
@@ -219,7 +223,7 @@ published:  false
 1.长期的蹲守，静止，心若止水，极静才能极动；
 2.老虎，猎豹每次狩猎都成功吗？很显然不可能，所有掠食者，最顶尖的掠食者也不可能做到100%的成功率，百发百中，这不可能，天道使然。
 假设真能100%成功，那么这个物种必然泛滥成灾，即使真的如澳洲的外来物种入侵，当地的自然生态也无法承受，必定有个极限，
-然后开始物种内部的崩溃。
+然后物种开始内部的崩溃。恐龙的灭绝很可能就是当时的地球环境，生态太适合它们生存了，然后内部崩溃。富贵而骄，自遗其疚。
 所以你追求“一”就是煞笔，反而“不一而一”才是真的一，万事万物必然有例外。很可能人类自身就是物种进化的例外。
 同样的，令狐冲的那个感慨：既然不能融而为一，又何必强求，当求随心所欲，行乎其不得不行，止乎其不得不至。
 所以，龙头妖股，底部几板断档，各种鸟走势，完全看的就是：你对市场的理解，对自身的理解。赌。
@@ -229,6 +233,8 @@ published:  false
 太多那种底部明显近期阻挡的一板涨停突破了。
 ### 排除法
 底部不碰，一板不碰，非单边无锚不碰，先假定所有都不太可能是龙头妖股，就是那种碰到阻挡会有回测，不会直接连扳突破。
+呵呵，你说底部不碰，银之杰，海能达超级大妖股，龙头妖股往往就是直接底部一字板涨停，直接涨停开始连续性上涨的，
+所以一切的判断标准在：换手，是否绝对完全充分，甚至这里左侧上方的套牢盘都是障眼法。
 
 炒股赚钱太难了，卧槽你妈逼的，昨天大赚，今天大亏，看似很暴利，其实只是巨幅波动，空欢喜。
 
@@ -236,28 +242,40 @@ published:  false
 知行合一为什么这么难？因为具体的行是由当时的具体情况决定的。
 比如江南高纤，在2.9的位置是强阻挡，但是到时候具体能否突破，完全是看历史过去在此到底有多少套牢盘，有多少止盈盘对突破这个没信心，这是空头力量，
 还要看多头，具体到时场外有多少看好此股的资金，多少打板资金，多少继续持仓看涨的人，所有的合力决定到时候这个强阻挡能否突破。
-这个既是分歧，也是悬念。假设这个地方突破了，收盘涨停的，那么后续就会一字板，就没参与机会了。
-这个就和向下假突破是一个道理，市场是准许假突破存在的，因为假突破没有得到二次确认，所以趋势并没改变（未必，也不一定需要二次确认，这就是市场吊诡的地方），
+（其实这个和刚刚突破，站上的2.25的强阻挡是一样的，所以为什么我不应该在回踩30日均线，回踩上上个突破点，也即支撑买入，因为会反复在2.25以下震荡，
+即使你通过调整的单边下跌，大概率判断不会反复，但是依然有反复的概率，还有有概率底部较长期调整。所以这个就是突破的原理，也是利物莫为什么从来不在回调买入，而只在创新高买入。
+创新高买入，和他说的突破100元面值后买入，股价会一口气不停歇的继续涨30,40个点的原理都是一样的。
+同样这也解释了为什么没有K线，各种技术指标依然能够炒股，能够赚大钱。核心的关键还是换手，甚至之所以能够创新高，也是因为换手。）
+看大作手回忆录，要学会提问，要质疑，然后弄清楚，弄透彻。被应试教育，被学校，被老师，被工作，被父母搞成傻逼了。麻木，顽固，狭隘，偏狭。
+2.9的阻挡这个既是分歧，也是悬念。假设这个地方突破了，收盘涨停的，那么后续就会一字板，就没参与机会了。
+这个就和向下假突破是一个道理，市场是准许假突破存在的，甚至可以说是由假突破来驱动，来媾和组成市场的。
+因为假突破没有得到二次确认，所以趋势并没改变（未必，也不一定需要二次确认，这就是市场吊诡的地方），
 但是你这时却因为向下假突破关键位置止损了，被洗盘洗掉了。但是如果你不止损，那么等这个“假突破”得到二次确认之后，
 第二天必然大幅低开，甚至一字板跌停，这时你止损，那损失就大了。
 这和假设这次是向上的真突破，那么必然大幅高开，甚至向上突破后第二日直接一字板涨停是同理，根本没法下嘴。
-无法采取具体操作依据，所以几乎没有任何意义。即使大幅高开依然可能是假突破，也可能历史阻挡再次向下回踩支撑调整，你还是只能吃瘪吃耳光。
+无法采取具体操作依据，所以几乎没有任何意义。即使大幅高开依然可能是假突破，也可能遇历史阻挡再次向下回踩支撑调整，你还是只能吃瘪吃耳光。
 所以一切都是赌，这也是不确定性的由来。
 所以在底部，关键支撑开仓并不安全，特别是期货，而且对手盘交易，不破不换手，大概率必然向下假突破。
 最安全的其实是创新高后开仓做多，因为这时候多头最强。只是大多数时候都是假突破，或者突破创新高后，再次向下区间调整，
-所以你创新高后开仓做多后要假定是趋势，走势会越来越强，所以不应该收在5日均线以下。但是大多数情况下你是错的会止损，除非大盘配合。
+所以你创新高后开仓做多后要假定是趋势，走势会越来越强，所以不应该收在5日均线以下（其实就是应该不间断的，连续性涨停，大涨）。
+但是大多数情况下你是错的会止损（这个根本不算错，而是必然的。），除非大盘配合。
 其实这时候你拿个10%做止损比底部拿个10%做止损要难被打止损的多。
 一切都是赌，都是赌趋势，既然如此为何不在创历史新高后赌？所以就是
-1.创历史新高；2.涨停之后的调整买入。（呵呵，这里同样有问题：就是涨停后不调整直接继续涨停，以及涨停后大幅高开却继续调整，破涨停当天最低点的问题。）
+1.创历史新高；2.涨停之后的调整买入。（呵呵，这里同样有问题：就是涨停后不调整直接继续涨停，以及涨停后大幅高开却继续调整，破涨停当天最低点的二元悖论问题。）
 
-所以接近新高后涨停后调整收敛就会暴力拉升有一波大行情的认知是错的，还是在求定法。但是在这里开仓赌却是对的。
-知道最关键位置的突破后开仓去赌就是正确的操作，只是结果出错，大多数情况下止损出局的结局依然是无法避免的，
+所以接近新高后涨停后调整收敛就会暴力拉升有一波大行情的认知是错的，还是在求定法。但是在这里开仓赌却是对的，操作是对的。
+知道最关键位置的突破后开仓去赌就是正确的操作，只是结果出错，大多数情况下止损出局的结局依然是无法避免，甚至可以说是必然的，
 但这并不是错误而是正确，这才是“不一而一”。
+所以要搞清楚，到底是认知是错的，还是操作是错的，甚至这两者都是错的。即使认知，操作都是对的，结局依然大概率，大多数情况下是止损出局。
+这里就看你对这个标的的理解透彻程度了，是否参与这次机会，就和猎豹选择是否进行这次狩猎是一样的。
 所以之前经常他妈的时对时错，而且经常错偶尔对，这他妈太正常了，而且这本身就符合市场走势。
 其实只要走势强到一定程度，简单到一定程度就可以开仓介入。反复，调整，强弱在你可接受的范围之内。
 
 换手，一致，分歧，一致即一，分歧即二，一生二，二玄一。一直分歧一直涨，
 一致转分歧（一生二），对应到走势就是明显的锚定效应的突破,连续性的一字板，然后暴跌。
-分歧转一致（二玄一），就是调整的不断收敛，多空力度和而为一，合而为一。
+分歧转一致（二玄一），就是调整的不断收敛，空间时间的不断收敛，多空力度和而为一，合二为一。
 再加上大盘的走势，情绪的和而为一，同理的天时地利人和，所以何时开平仓一目了然，圣人抱一为天下式。
 炒股，一个一字就够了。
+
+2024.12.08 假突破和那个波段式上涨本质是一样的，那个掐头去尾，等次级别趋势腰部突破，和不断观察等调整到“一”，和那个杰西利物莫
+的翻身之战是一样的。那个龙头妖股的首板涨停启动也是同理的。
